# FaceTracking

./: CMakeLists.txt
src/: Camera.cpp  Camera.h  Display.cpp  Display.h  main.cpp
